// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|add proposals to steps Admin add a step to two proposals, one already having it. The new step has default status 1`] = `
Object {
  "addProposalsToSteps": Object {
    "error": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "selections": Array [
              Object {
                "status": Object {
                  "id": "status4",
                },
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
                },
              },
              Object {
                "status": Object {
                  "id": "status6",
                },
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMg==",
                },
              },
            ],
          },
        },
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwy",
            "selections": Array [
              Object {
                "status": Object {
                  "id": "status5",
                },
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
                },
              },
              Object {
                "status": null,
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMg==",
                },
              },
            ],
          },
        },
      ],
    },
    "steps": Array [
      Object {
        "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMg==",
      },
    ],
  },
}
`;

exports[`Internal|add proposals to steps Admin add an already present step to a proposal 1`] = `
Object {
  "addProposalsToSteps": Object {
    "error": null,
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "selections": Array [
              Object {
                "status": Object {
                  "id": "status4",
                },
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
                },
              },
            ],
          },
        },
      ],
    },
    "steps": Array [
      Object {
        "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
      },
    ],
  },
}
`;

exports[`Internal|add proposals to steps Admin sends step not matching the project or not a collect step and receives an error 1`] = `
Object {
  "addProposalsToSteps": Object {
    "error": "NO_VALID_STEP",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
            "selections": Array [
              Object {
                "status": Object {
                  "id": "status4",
                },
                "step": Object {
                  "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25zdGVwMQ==",
                },
              },
            ],
          },
        },
      ],
    },
    "steps": Array [],
  },
}
`;

exports[`Internal|add proposals to steps Admin tries to add an invalid proposal and receives an error 1`] = `
Object {
  "addProposalsToSteps": Object {
    "error": "NO_VALID_PROPOSAL",
    "proposals": Object {
      "edges": Array [],
    },
    "steps": Array [],
  },
}
`;
